--- a/overview.html
+++ b/overview.html
@@ -297,11 +297,11 @@ $(document).ready(function () {
 <ul>
 <li><a href="exercises_slides.html#(1)">Exercise: writing BUGS code</a></li>
 </ul></li>
-<li><a href="build_model_slides.html">Building a model in NIMBLE</a>
+<li><a href="build_model_slides.html">Building a model in NIMBLE</a></li>
+<li><a href="mcmc_concepts_slides.html">MCMC concepts</a>
 <ul>
 <li><a href="exercises_slides.html#(2)">Exercise: building a model</a></li>
 </ul></li>
-<li><a href="mcmc_concepts_slides.html">MCMC concepts</a></li>
 <li><a href="run_mcmc_slides.html">Running an MCMC</a></li>
 <li><a href="customizing_mcmc_slides.html">Customizing an MCMC</a>
 <ul>
@@ -317,15 +317,14 @@ $(document).ready(function () {
 <li>Programming in NIMBLE
 <ol style="list-style-type: decimal">
 <li><a href="operating_model_slides.html">Operating a NIMBLE model</a></li>
-<li><a href="data_nodes_slides.html">Specifying data</a></li>
 <li><a href="model_structure_slides.html">Inspecting model structure</a></li>
 <li><a href="nimbleFunctions_slides.html">Writing an algorithm using nimbleFunctions</a></li>
 <li><a href="user_sampler_slides.html">Writing your own MCMC sampler</a></li>
 </ol></li>
 </ul>
-<p>Exercises can be found <a href="exercises_slides.html">here</a>; we’ll work on some of these during the workshop.</p>
 <p>Other topics:</p>
 <ol style="list-style-type: decimal">
+<li><a href="data_nodes_slides.html">Specifying data</a></li>
 <li><a href="constants_slides.html">Constants in BUGS code</a></li>
 <li><a href="litters_example_slides.html">An extended MCMC example</a></li>
 <li><a href="vectorizing_slides.html">Vectorizing BUGS code</a></li>
