--- a/overview.html
+++ b/overview.html
@@ -298,11 +298,11 @@ $(document).ready(function () {
 <li><a href="exercises_slides.html#(1)">Exercise: writing BUGS code</a></li>
 </ul></li>
 <li><a href="build_model_slides.html">Building a model in NIMBLE</a></li>
-<li><a href="mcmc_concepts_slides.html">MCMC concepts</a>
+<li><a href="mcmc_concepts_slides.html">MCMC concepts</a></li>
+<li><a href="run_mcmc_slides.html">Running an MCMC</a>
 <ul>
 <li><a href="exercises_slides.html#(2)">Exercise: building a model</a></li>
 </ul></li>
-<li><a href="run_mcmc_slides.html">Running an MCMC</a></li>
 <li><a href="customizing_mcmc_slides.html">Customizing an MCMC</a>
 <ul>
 <li><a href="exercises_slides.html#(3)">Exercise: Modifying MCMC samplers</a></li>
